# AirPredict

./: .gitignore  Dockerfile  Dockerfile_API  Dockerfile_Client  LICENSE  README.md  current_data.csv.dvc  docker-compose.yml  docker_image_link.txt  merged_processed_data.csv.dvc  preprocessed_air_data.csv.dvc  preprocessed_weather_data.csv.dvc  pyproject.toml  raw_air_data.csv.dvc  raw_weather_data.csv.dvc  reference_data.csv.dvc
.dvc/: config
.github/workflows/: fetch_air_data.yml  fetch_data  fetch_data.yml  fetch_data_copy  fetch_data_naloga_1.yml  fetch_data_new.yml  fetch_data_working new steps  fetch_weather_data.yml  main.yml  merged_processed_data.yml  mlflow.yml  preprocess_air_data.yml  preprocess_weather_data.yml
data/processed/: cleaned_arsopodatki_2.csv  current_data.csv
data/raw/: raw_arsopodatki_1.csv  raw_arsopodatki_2.csv  raw_arsopodatki_3.csv  raw_arsopodatki_4.csv  raw_arsopodatki_5.csv  raw_arsopodatki_6.csv  raw_arsopodatki_7.csv  raw_arsopodatki_8.csv  raw_arsopodatki_9.csv
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: run_my_checkpoint.py
great_expectations/expectations/: .ge_store_backend_id  my_suite.json
models/: LG_model_3.pkl
reports/: metrics.txt  metrics_2.txt  train_metrics.txt  train_metrics_2.txt
src/client/: package-lock.json  package.json
src/data/: evidently.py  evidently_file.py  evidently_test.py  fetch_air_data.py  fetch_data.py  fetch_weather_data.py  merge_processed_data.py  preprocess_air_data.py  preprocess_weather_data.py  process_data.py  test_air.py  test_weather.py  (+1 more)
(+8 files in other folders)
