[tool.poetry]
name = "airpredict"
version = "0.1.0"
description = "Naloga 1"
authors = ["alengojkosek <alen.gojkosek@student.um.si>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pickleshare = "0.7.5"
flask = "^2.2.3"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
pytest = "^7.2.1"
requests = "^2.28.2"
flask-cors = "^3.0.10"
dvc = "^2.51.0"
great-expectations = "^0.16.1"
evidently = "^0.2.7"
llvmlite = "^0.39.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
